Fix UI issue with logo overlapping the MovieDialog and move MovieDetails component inside Header component

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,3 +32,7 @@ header {
   margin-right: 86px;
   background: inherit;
 }
+
+.header__first-elements :first-child {
+  z-index: 3;
+}
